--- a/Water_Environment/Views/Home/AboutUs.cshtml
+++ b/Water_Environment/Views/Home/AboutUs.cshtml
@@ -119,8 +119,8 @@
     }
 
     .cardImg {
-        width: 31px;
-        height: 31px;
+        width: 65px;
+        height: 65px;
     }
 
     .cardImgContainer {
@@ -239,66 +239,66 @@
             </div>
             <div class="responsive-container-block textSide">
                 <p class="text-blk heading">
-                    About Us
+                    Thông tin nhóm
                 </p>
                 <p class="text-blk subHeading">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus lectus viverra in semper nec pretium mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus lectus viverra in semper nec pretium mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus lectus viverra in semper nec pretium mus.
+                    WWF là một trong những tổ chức phi chính phủ quốc tế đầu tiên hoạt động tại Việt Nam. Từ năm 1985, WWF đã hỗ trợ Việt Nam xây dựng chiến lược bảo tồn quốc gia và kể từ đó hợp tác chặt chẽ với chính phủ và các đối tác nhằm giải quyết những thách thức môi trường tại Việt Nam. WWF-Việt Nam là một phần của WWF–Greater Mekong bao gồm WWF-Campuchia, WWF-Lào, WWF-Thái Lan và WWF-Myanmar.
                 </p>
                 <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
                     <div class="cardImgContainer">
-                        <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+                        <img class="cardImg" src="https://scontent.fsgn8-4.fna.fbcdn.net/v/t39.30808-6/373689812_1999150267110174_5784507148850678094_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=asDful9sbHgAX-BjwZO&_nc_ht=scontent.fsgn8-4.fna&oh=00_AfDPYaru79AN_i07WxoMDJIU5Nz7H_AK-NUep4pqSM3M2A&oe=6544158A">
                     </div>
                     <div class="cardText">
                         <p class="text-blk cardHeading">
-                            Value
+                            Nguyễn Thị Minh Tâm
                         </p>
                         <p class="text-blk cardSubHeading">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                           Là một thành viên của nhóm chúng tôi.
                         </p>
                     </div>
                 </div>
                 <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
                     <div class="cardImgContainer">
-                        <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+                        <img class="cardImg" src="https://scontent.fsgn8-4.fna.fbcdn.net/v/t39.30808-6/284558879_781429289893581_9152208519850842240_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=qGKgcRQ4fecAX9JCF7H&_nc_oc=AQkl7S2o5nsuMI2T5Cz2Zuj2OX6bNn8-ZADc4-FATgwxiDK-2Exyq8Gg1vUOPjBuUIs&_nc_ht=scontent.fsgn8-4.fna&oh=00_AfBmo63RmXGN2CNE31Y4vlAjv_fuDe_yOFkvxUVtAiFPCQ&oe=654421B4">
                     </div>
                     <div class="cardText">
                         <p class="text-blk cardHeading">
-                            Value
+                            Nguyễn Thị Mỹ Linh
                         </p>
                         <p class="text-blk cardSubHeading">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Là một thành viên của nhóm chúng tôi.
                         </p>
                     </div>
                 </div>
                 <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
                     <div class="cardImgContainer">
-                        <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+                        <img class="cardImg" src="https://scontent.fsgn8-3.fna.fbcdn.net/v/t39.30808-6/346279294_656362252971076_8425465845260028257_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=0uk9F-JUEkcAX8CmZav&_nc_ht=scontent.fsgn8-3.fna&oh=00_AfACUCGZmZpDHwhj6UJrW9vxNj17Q161NRjpoJuyn01IBQ&oe=6544388C">
                     </div>
                     <div class="cardText">
                         <p class="text-blk cardHeading">
-                            Value
+                            Doãn Trung Hoàng
                         </p>
                         <p class="text-blk cardSubHeading">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Là một thành viên của nhóm chúng tôi.
                         </p>
                     </div>
                 </div>
                 <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
                     <div class="cardImgContainer">
-                        <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+                        <img class="cardImg" src="https://scontent.fsgn8-4.fna.fbcdn.net/v/t39.30808-6/366811752_1418297455570140_3685931921220984560_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=4WQmNyUV7n8AX-0n_MP&_nc_ht=scontent.fsgn8-4.fna&oh=00_AfAR1U2eNa56JKH23VR35yw0pTtlpz1L2i6tg9KYMWKrnA&oe=654408A0">
                     </div>
                     <div class="cardText">
                         <p class="text-blk cardHeading">
-                            Value
+                            Nguyễn Phan Nhất Duy
                         </p>
                         <p class="text-blk cardSubHeading">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Là một thành viên của nhóm chúng tôi.
                         </p>
                     </div>
                 </div>
                 <a>
                     <button class="explore">
-                        Explore our Services
+                        Thông tin chi tiết về chúng tôi.
                     </button>
                 </a>
             </div>
