--- a/Water_Environment/Views/Home/Navbar.cshtml
+++ b/Water_Environment/Views/Home/Navbar.cshtml
@@ -11,7 +11,7 @@
                         Giới thiệu
                         <ul class="sub-menu">
                             <li><a href="#">Tổng quát</a></li>
-                            <li><a href="#">Thông tin nhóm</a></li>
+                            <li><a href="/Home/AboutUs">Thông tin nhóm</a></li>
                         </ul>
                     </li>
                     @{
