--- a/Water_Environment/Views/ActivitiesNews/Content.cshtml
+++ b/Water_Environment/Views/ActivitiesNews/Content.cshtml
@@ -4,7 +4,9 @@
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
-
 <div class="container">
-    @Html.Raw(Model.Content)
+    @Html.Raw(Model.Content))
 </div>
+@*<div class="container text-center">
+    @Html.Raw(Model.Content)
+</div>*@
