--- a/Water_Environment/Views/Admin/ManageActivitiesNews.cshtml
+++ b/Water_Environment/Views/Admin/ManageActivitiesNews.cshtml
@@ -8,7 +8,7 @@
 <h2>Danh sách bài viết</h2>
 
 <div class="text-right">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Thêm Loại" data-bs-target="#ModalEdit">Thêm loại</button>
+    <a role="button" href="/Admin/CreateActivitiesNews"><button type="button" class="btn btn-primary">Thêm Bài Viết</button></a>
 </div>
 <div class="card-body">
     <div class="table-responsive">
@@ -30,14 +30,13 @@
                         <td>@item.ActivitiesAndNew.id</td>
                         <td>@item.ActivitiesAndNew.Title</td>
                         <td>@item.CategoryName</td>
-                        <td> <input class="form-check-input" type="checkbox" checked="@item.ActivitiesAndNew.IsActive" disabled></td>
+                        @*<td> <input class="form-check-input" type="checkbox" checked="@item.ActivitiesAndNew.IsActive" disabled></td>*@
                         <td>@item.ActivitiesAndNew.CreateOn</td>
                         <th>
                             <div class="btn-group" role="group">
                                 @*<i class="fas fa-edit"></i>*@
-                                @*<button type="button" class="btn btn-primary" onclick="EditUser(@item.id)">Sửa</button>*@
                                 <a role="button" href="/Admin/EditActivitiesNews/@item.ActivitiesAndNew.id"><button type="button" class="btn btn-primary">Sửa</button></a>
-                                @*<button type="button" class="btn btn-primary">Sửa</button>*@
+                                <button type="button" class="btn btn-danger ms-1" onclick="DeleteActivitiesNews(@item.ActivitiesAndNew.id)">Xóa</button>
                             </div>
                         </th>
                     </tr>
@@ -77,87 +76,22 @@
     </div>
 </div>
 <script>
-    var modalEdit = document.getElementById('ModalEdit');
-    modalEdit.addEventListener('show.bs.modal', function (event) {
-        // Button that triggered the modal
-        var button = event.relatedTarget;
-        var modalActiveValue = modalEdit.querySelector('#category-active')
-        var modalTitle = modalEdit.querySelector('.modal-title');
-        var titleModal = button.getAttribute('title');
-        modalTitle.textContent = titleModal;
-        modalActiveValue.disabled = false;
-        console.log("titleModal", titleModal);
-        if (titleModal == "Thêm Loại") {
-            modalActiveValue.disabled = true;
-        }
-        else {
-            // Extract info from data-bs-* attributes
-            var id = button.getAttribute('data-category-id')
-            var name = button.getAttribute('data-category-name')
-            var isActive = button.getAttribute('data-category-active')
-            var modalIdValue = modalEdit.querySelector('#category-id')
-            var modalNameValue = modalEdit.querySelector('#category-name')
-            modalIdValue.value = id;
-            modalNameValue.value = name;
-            modalActiveValue.checked = (isActive == "True");
-        }
-    })
-
-    function SaveInfo() {
-        var modalTitle = document.getElementById('ModelTitle').innerHTML;
-        var id = $("#category-id").val();
-        var name = $("#category-name").val();
-        var isActive = $("#category-active").val();
-
-        if (name == '' || code == '') {
-            alert('Vui lòng nhập đủ thông tin');
-            return;
-        }
-        if (modalTitle == "Thêm Loại") {
-            $.ajax({
-                url: '/Admin/AddCategory',
-                type: 'POST',
-                dataType: 'text',
-                data: {
-                    id: id,
-                    Code: code,
-                    Name: name
-                }
-            }).done(function (result) {
-                var rsJson = JSON.parse(result);
-                if (rsJson.Success == true) {
-                    alert(rsJson.Message);
-                    window.location.reload();
-                    return;
-                }
-                else {
-                    alert(rsJson.Message);
-                    return;
-                }
-            });
-        }
-        else {
-            $.ajax({
-                url: '/Admin/EditCategory',
-                type: 'POST',
-                dataType: 'text',
-                data: {
-                    id: id,
-                    Name: name,
-                    IsActive: isActive === "on"
-                }
-            }).done(function (result) {
-                var rsJson = JSON.parse(result);
-                if (rsJson.Success == true) {
-                    alert(rsJson.Message);
-                    window.location.reload();
-                    return;
-                }
-                else {
-                    alert(rsJson.Message);
-                    return;
-                }
-            });
-        }
+    function DeleteActivitiesNews(id) {
+        if (!confirm("Bạn có thực sự muốn xóa bài viết này không?")) return;
+        $.ajax({
+            url: '/Admin/DeleteActivitiesNews/' + id,
+            type: 'DELETE'
+        }).done(function (result) {
+            var rsJson = JSON.parse(result);
+            if (rsJson.Success == true) {
+                alert(rsJson.Message);
+                window.location.reload();
+                return;
+            }
+            else {
+                alert(rsJson.Message);
+                return;
+            }
+        });
     }
 </script>
