--- a/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
+++ b/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
@@ -10,6 +10,7 @@
     <link href="~/AdminAssets/css/sb-admin-2.min.css" rel="stylesheet">
     <script src="~/AdminAssets/js/sb-admin-2.min.js"></script>
     <link href="~/Content/PagedList.css" rel="stylesheet" />
+    <link href="~/Content/head.css" rel="stylesheet" />
     @*<script src="~/Scripts/jquery-3.4.1.js"></script>*@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.tiny.cloud/1/ldifb3wbpipz2j97ne2j62ij420yp8y4n7c2cwyz0t081m6b/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
@@ -100,7 +101,7 @@
                         </button>
 
                         <!-- Topbar Search -->
-                        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                        @*<form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group">
                                 <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm" aria-label="Search" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
@@ -109,7 +110,8 @@
                                     </button>
                                 </div>
                             </div>
-                        </form>
+                        </form>*@
+                        @RenderPage("Page_Search_Amin.cshtml")
 
                         <!-- Topbar Navbar -->
                         <ul class="navbar-nav ml-auto">
@@ -135,8 +137,8 @@
                             </li>
                             <!-- Nav Item - User Information -->
                             @*@{
-                                    var fullname = ((USER)Session["login"]).Fullname;
-                                }*@
+                var fullname = ((USER)Session["login"]).Fullname;
+            }*@
 
                             <li class="nav-item dropdown no-arrow">
                                 <div class="dropdown">
